.k8s/ratelimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratelimit
  name: ratelimit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ratelimit
    spec:
      containers:
        - args:
            - /bin/ratelimit
          image: envoyproxy/ratelimit:master
          name: ratelimit
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          volumeMounts:
            - mountPath: /data/ratelimit/config/example.yaml
              name: ratelimit-conf
              subPath: example.yaml
      volumes:
        - name: ratelimit-conf
          configMap:
            name: ratelimit-conf
            
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: default
spec:
  selector:
    app: ratelimit 
  ports:
    - name: service
      protocol: TCP
      port: 8080 
      targetPort: 8080
    - name: service2
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: service3
      protocol: TCP
      port: 6070
      targetPort: 6070
