.k8s/statsd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: statsd
  name: statsd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statsd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: statsd
    spec:
      containers:
        - args:
            - --statsd.mapping-config=/etc/statsd-exporter/conf.yaml
          command:
            - /bin/statsd_exporter
          image: prom/statsd-exporter:v0.18.0
          name: statsd
          ports:
            - containerPort: 9125
            - containerPort: 9102
          volumeMounts:
            - mountPath: /etc/statsd-exporter/
              name: statsd-conf
      volumes:
        - name: statsd-conf
          configMap:
            name: statsd-conf
---
apiVersion: v1
kind: Service
metadata:
  name: statsd
  namespace: default
spec:
  ports:
    - name: "9125"
      port: 9125
      targetPort: 9125
    - name: "9102"
      port: 9102
      targetPort: 9102
  selector:
    app: statsd
