.k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ratelimit-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    #traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: envoy-proxy
          servicePort: 8888
